--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,3 +3,4 @@ $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import './global.scss';
+@import '../components/app/style.scss';
