--- a/src/components/app/style.scss
+++ b/src/components/app/style.scss
@@ -5,6 +5,17 @@
   overflow-y: overlay;
 
   .header {
+    .back-home-button {
+      top: 1%;
+      left: 1%;
+      position: absolute;
+      @extend %button;
+      width: 150px;
+      height: 50px;
+      border-radius: 5px;
+      border: 2px $borderColorButton solid;
+    }
+
     .header-wrapper {
       padding: 0 2%;
       padding-top: 20px;
@@ -12,7 +23,7 @@
       
       .search-wrapper {
         @include flex;
-        width: 500px;
+        width: 40vw;
         height: 47px;
         transform: skew(-45deg);
         border: 2px $borderColorButton solid;
@@ -82,7 +93,7 @@
         bottom: 1%;
         left: 1%;
         width: 98%;
-        height: 87%;
+        height: 86%;
         border: solid 2px $borderColorButton;
         box-shadow: 0 0 10px 5px $borderColorShadow;
       }
