refactor: change style

--- a/src/components/app/style.scss
+++ b/src/components/app/style.scss
@@ -103,7 +103,7 @@
   .footer {
     .footer-wrapper {
       padding: 0 2%;
-      margin-top: 700px;
+      margin-top: 90vh;
       margin-bottom: 50px;
       @include flex;
 
